# ecobuild-graph-pipeline

./: .gitignore
microservices/backend/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
microservices/backend/experiments/: 01a155e3-18cc-4f89-9349-0ee5f9bc96dd_result.json  026f95e1-b9b8-4068-8a96-1477f5b4e9ea_config.json  026f95e1-b9b8-4068-8a96-1477f5b4e9ea_result.json  0730781d-fd2a-4cfa-88c3-0947e833dd1e_result.json  0977a60a-33a1-4248-8b1c-3388b8d72a56_config.json  0a649063-920d-42e9-8196-9a4602ba4d8c_result.json  0b0b0027-275c-4ebd-9db2-ebd7fccdc3b3_result.json  0bd2bc79-af0d-4bd4-adaf-36131cd71ba3_result.json  0d9394ea-fe6a-4d2f-a1d9-88620c8f3dd5_result.json  0f9232b8-2c7d-4bfc-84a9-bf5e362484ff_result.json  1748ab46-855d-497d-b5a0-58fd3673eb7c_result.json  2d2d3e41-f7fe-4a40-b57f-a00d64fa1cf4_result.json  3fd4c8c4-e1a4-4f27-976d-8b8397da1251_result.json  444394a0-3e6c-473c-a1aa-32b2077c2c79_result.json  49f98ecb-c657-4805-bd4a-9bc09e51c5e6_result.json  6412d8a3-5d08-4949-9ec0-d50404a758a0_config.json  64c374a3-0f40-456e-8b55-32ef4335bfd8_result.json  69e3526f-e9ba-49ee-a7ca-93201ad78a93_config.json  69e3526f-e9ba-49ee-a7ca-93201ad78a93_result.json  7f958c86-2ae7-486b-887a-eb7462aa3e9f_result.json  8e57c9c9-1be9-4af7-b08e-6e015bdcbe55_result.json  b3ee7a08-4dee-4ba6-b7d7-7af0896b5d63_result.json  b9d9a8c9-9e44-49e4-9647-06c2cab1e3bf_result.json  c176dc38-a3ba-4eca-a384-afbb4998cde1_result.json  c8c0e021-c677-4794-8e87-8e88893937c6_result.json  c9d76a6e-f49e-4b04-8acc-d0ac82c4c979_result.json  e63ea584-f091-4615-ab1d-54a4043ef74d_result.json  fa662a33-5b71-4977-ab0c-5633caf05ae6_result.json
microservices/knowledge-extraction/: .env.template  .gitignore  Dockerfile  README.md  poetry.lock.bak  pyproject.toml
microservices/knowledge-extraction/scripts/: pull_model.py
microservices/knowledge-extraction/src/: building_preprocessor.py  context_resolver.py  design_strategy_extractor.py  document_converter.py  ecosystem_service_extractor.py  entity_extractor.py  entity_resolution.py  general_config.py  ke_logger.py  llama_index_interface.py  llm_config.py  main.py  paper_labeler.py  paper_preprocessor.py  paper_section_extractor.py  test_config.json
microservices/knowledge-extraction/test_papers/examples/: brunsgaard_2011_converted.txt  building_extraction_example_1.json  building_extraction_example_2.json  design_strategy_extraction_example_1.json  design_strategy_extraction_example_2.json  ecosystem_service_extraction_example_1.json  ecosystem_service_extraction_example_2.json  hecht_2025_converted.txt
microservices/knowledge-extraction/test_papers/preprocessed/: 1-s2.0-S0959652612001436-main_extraction.json  10.1016@j.scs.2019.101672_raw.txt  (+43 more)
microservices/paper-crawler/: .env.template  Dockerfile  README.md  pyproject.toml
microservices/paper-crawler/crawler/: config.py  crawler_logger.py  dotenv_test.py  main.py
orchestration/: .env.template  README.md  docker-compose.gpu.yml  docker-compose.yml  pyproject.toml  run_experiments.py
orchestration/experiments/: test_config.json
orchestration/utils/: README.md  clone.sh  copy_dotenv.sh  pull.sh
(+20 files in other folders)
