[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Dorus <doruskeijzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
sqlalchemy = "^2.0.41"
psycopg = "^3.2.9"
pydantic = "^2.11.7"
python-multipart = "^0.0.26"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
