[tool.poetry]
name = "knowledge-extraction"
version = "0.1.0"
description = ""
authors = ["Dorus <doruskeijzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
neo4j-graphrag = "^1.14.0"
requests = "^2.32.4"
numpy = "^2.3.1"
rapidfuzz = "^3.13.0"
spacy = "^3.8.7"
neo4j = "^5.28.1"
pymupdf = "^1.24.0"
pymupdf4llm = "^1.27.0"
python-docx = "^1.1.2"
llama-index = "^0.14.18"
llama-index-core = "^0.14.18"
llama-index-llms-ollama = "^0.10.0"
llama-index-embeddings-ollama = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
