[tool.poetry]
name = "paper-crawler"
version = "0.1.0"
description = ""
authors = ["Dorus <doruskeijzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.33.0"
dotenv = "^0.9.9"
psycopg = "^3.2.9"


[tool.poetry.group.test.dependencies]
pytest = "^8.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
